<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.danielschwenk.restaurant.Abschicken">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/abschicken_zusammenfassung"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- vorname -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_vorname"
        android:id="@+id/abschicken_vorname_text"
        android:layout_alignTop="@+id/abschicken_vorname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_vorname"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <!-- nachname -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_nachname"
        android:id="@+id/textView3"
        android:layout_below="@+id/abschicken_vorname_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_nachname"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/abschicken_vorname"
        android:layout_alignEnd="@+id/abschicken_vorname" />


    <!-- tischnummer -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_tischnummer"
        android:id="@+id/textView4"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_tischennummer"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/abschicken_nachname"
        android:layout_alignStart="@+id/abschicken_nachname" />


    <!-- bezahlmethode -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_bezahlmethode"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_bezahlmethode"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/abschicken_tischennummer"
        android:layout_alignStart="@+id/abschicken_tischennummer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <!-- gericht -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_gericht"
        android:id="@+id/textView6"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_gericht"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/abschicken_bezahlmethode"
        android:layout_alignStart="@+id/abschicken_bezahlmethode"
        android:layout_alignRight="@+id/abschicken_bezahlmethode"
        android:layout_alignEnd="@+id/abschicken_bezahlmethode" />


    <!-- getränk -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/abschicken_getraenk"
        android:id="@+id/textView8"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/abschicken_getraenk"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignLeft="@+id/abschicken_gericht"
        android:layout_alignStart="@+id/abschicken_gericht"
        android:layout_alignRight="@+id/abschicken_gericht"
        android:layout_alignEnd="@+id/abschicken_gericht" />

    <!-- abschicken -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abschicken_bt"
        android:id="@+id/button_abschicken"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_green_light"/>


</RelativeLayout>
